# gtest_demo_cmake

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt
src/include/: functions.h
src/source/: functions.cpp  main.cpp
tests/: CMakeLists.txt  functionsTest.cpp
